[gd_scene load_steps=3 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://ScrollContainer.gd" type="Script" id=2]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00390625, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -269.216
margin_top = 13.7581
margin_right = 249.784
margin_bottom = 83.7581
text = "Kinetic scrolling demo
The script extends the scroll container. You need to specify the direction of scrolling for the script to work. To work correctly with objects inside the scroll container, you need to check the status of the swipe."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer1" type="ScrollContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -512.0
margin_right = -524.0
rect_min_size = Vector2( 500, 512 )
scroll_vertical_enabled = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ScrollContainer1"]
margin_right = 3450.0
margin_bottom = 500.0
rect_min_size = Vector2( 3450, 500 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer1/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -150.0
margin_bottom = 50.0
rect_min_size = Vector2( 3450, 500 )
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="ScrollContainer1/Panel/HBoxContainer"]
margin_right = 800.0
margin_bottom = 400.0
rect_min_size = Vector2( 800, 400 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Button 1"

[node name="Button2" type="Button" parent="ScrollContainer1/Panel/HBoxContainer"]
margin_left = 850.0
margin_right = 1650.0
margin_bottom = 400.0
rect_min_size = Vector2( 800, 400 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Button 2"

[node name="Button3" type="Button" parent="ScrollContainer1/Panel/HBoxContainer"]
margin_left = 1700.0
margin_right = 2500.0
margin_bottom = 400.0
rect_min_size = Vector2( 800, 400 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Button 3"

[node name="Button4" type="Button" parent="ScrollContainer1/Panel/HBoxContainer"]
margin_left = 2550.0
margin_right = 3350.0
margin_bottom = 400.0
rect_min_size = Vector2( 800, 400 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Button 4"

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
margin_left = 508.0
margin_top = 88.0
margin_right = 1020.0
margin_bottom = 600.0
rect_min_size = Vector2( 500, 512 )
scroll_horizontal_enabled = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
scrollDirection = "Vertical"

[node name="Panel" type="Panel" parent="ScrollContainer2"]
margin_right = 500.0
margin_bottom = 3450.0
rect_min_size = Vector2( 500, 3450 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="ScrollContainer2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -150.0
margin_bottom = 50.0
rect_min_size = Vector2( 3450, 500 )
custom_constants/separation = 50

[node name="Button5" type="Button" parent="ScrollContainer2/Panel/HBoxContainer"]
margin_right = 400.0
margin_bottom = 800.0
rect_min_size = Vector2( 400, 800 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Button 5"

[node name="Button6" type="Button" parent="ScrollContainer2/Panel/HBoxContainer"]
margin_top = 850.0
margin_right = 400.0
margin_bottom = 1650.0
rect_min_size = Vector2( 400, 800 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Button 6"

[node name="Button7" type="Button" parent="ScrollContainer2/Panel/HBoxContainer"]
margin_top = 1700.0
margin_right = 400.0
margin_bottom = 2500.0
rect_min_size = Vector2( 400, 800 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Button 7"

[node name="Button8" type="Button" parent="ScrollContainer2/Panel/HBoxContainer"]
margin_top = 2550.0
margin_right = 400.0
margin_bottom = 3350.0
rect_min_size = Vector2( 400, 800 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Button 8"
[connection signal="button_up" from="ScrollContainer1/Panel/HBoxContainer/Button1" to="." method="_on_Button1_button_up"]
[connection signal="button_up" from="ScrollContainer1/Panel/HBoxContainer/Button2" to="." method="_on_Button2_button_up"]
[connection signal="button_up" from="ScrollContainer1/Panel/HBoxContainer/Button3" to="." method="_on_Button3_button_up"]
[connection signal="button_up" from="ScrollContainer1/Panel/HBoxContainer/Button4" to="." method="_on_Button4_button_up"]
[connection signal="button_up" from="ScrollContainer2/Panel/HBoxContainer/Button5" to="." method="_on_Button5_button_up"]
[connection signal="button_up" from="ScrollContainer2/Panel/HBoxContainer/Button6" to="." method="_on_Button6_button_up"]
[connection signal="button_up" from="ScrollContainer2/Panel/HBoxContainer/Button7" to="." method="_on_Button7_button_up"]
[connection signal="button_up" from="ScrollContainer2/Panel/HBoxContainer/Button8" to="." method="_on_Button8_button_up"]
